crates/elenchus-parser/tests/snapshots/errors__trailing_text_after_fact_atom.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"FACT a b c d\\n\")"
---
RESULT: 1 syntax error

FACT  (1 problem)
  syntax  : FACT <Subject> <predicate> [<object>]
  example : FACT socrates is human
    line 1, col 11 - unexpected text after the FACT atom
      | FACT a b c d
      |           ^^
